Layout bug fixes

--- a/stylesheets/posts/all.less
+++ b/stylesheets/posts/all.less
@@ -38,6 +38,7 @@
 
 			@media @small{
 				font-size: 2rem;
+				line-height: 2.25rem;
 			}
 		}
 
@@ -103,6 +104,7 @@
 				margin-right: 2.5rem;
 				border: solid 2px @purple;
 				line-height: 5rem;
+				white-space: nowrap;
 			}
 		}
 	}
