--- a/stylesheets/style.less
+++ b/stylesheets/style.less
@@ -446,8 +446,13 @@ p{
 		font-size: 1.5rem;
 		line-height: 2.8rem;
 
+		@media @small{
+			line-height: 2.3rem;
+		}
+
 		span a{
 			color: @dark-purple;
+			white-space: nowrap;
 		}
 
 		.subcategory{
